# SDG

./: .gitignore  pyproject.toml
.claude/: settings.local.json
scripts/: debug_single_expiry.py
src/sdg/core/: __init__.py  black_scholes.py
src/sdg/market_data/: __init__.py  converter.py  implied_vol.py
src/sdg/market_data/barchart/: __init__.py  client.py  csv_parser.py  pipeline.py  symbols.py  transform.py
src/sdg/pricing/: __init__.py  pricer.py
src/sdg/volatility/: __init__.py  bspline.py  cvi.py  types.py
tests/: test_barchart_client.py  test_barchart_csv.py  test_barchart_pipeline.py  test_barchart_transform.py  test_black_scholes.py  test_cvi.py  test_implied_vol.py  test_market_data.py  test_pricing.py
tests/fixtures/: barchart_options.csv  barchart_options.json  barchart_quotes.json  ko_options_20260203.csv  ko_quotes_20260203.json  palm_oil_options.csv
