[project]
name = "sdg"
version = "0.1.0"
description = "Commodities pricing and risk library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "cvxpy",
    "clarabel",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdg"]
